--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
-    "mongoose": "^6.2.9"
+    "mongoose": "^6.2.9",
+    "nanoid": "^3.3.2"
   }
 }
