--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "mongoose": "^6.2.9",
-    "nanoid": "^3.3.2"
+    "nanoid": "^3.3.2",
+    "passport": "^0.5.2"
   }
 }
