--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^6.14.0",
     "mongoose": "^6.2.9",
     "nanoid": "^3.3.2",
+    "nodemailer": "^6.7.3",
     "passport": "^0.5.2"
   }
 }
