--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
+    "formidable": "^2.0.1",
+    "jimp": "^0.16.1",
     "mongoose": "^6.2.9",
     "nanoid": "^3.3.2",
     "nodemailer": "^6.7.3",
