--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "formidable": "^2.0.1",
